<resources>
    <string name="app_name">Shop Stop</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="or">OR</string>
    <string name="signup">Signup</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="city">City</string>
    <string name="nameLabel">Name:</string>
    <string name="home_screen">Home Screen</string>
    <string name="usernameLabel">Username:</string>
    <string name="genderLabel">Gender:</string>
    <string name="ageLabel">Age:</string>
    <string name="cityLabel">City:</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>