<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="com.example.loginapp.viewmodel.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.HomeActivity">

        <TextView
            android:id="@+id/cityLabel"
            android:layout_width="0dp"
            android:layout_height="31dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/cityLabel"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ageLabel" />
        <TextView
            android:id="@+id/cityText"
            android:layout_width="0dp"
            android:layout_height="31dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@{viewmodel.city}"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/nameLabel"
            app:layout_constraintTop_toBottomOf="@+id/ageText" />

        <TextView
            android:id="@+id/ageLabel"
            android:layout_width="0dp"
            android:layout_height="31dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/ageLabel"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genderLabel" />
        <TextView
            android:id="@+id/ageText"
            android:layout_width="0dp"
            android:layout_height="31dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@{viewmodel.age}"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/nameLabel"
            app:layout_constraintTop_toBottomOf="@+id/genderText" />

        <TextView
            android:id="@+id/genderLabel"
            android:layout_width="0dp"
            android:layout_height="31dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/genderLabel"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameLabel" />
        <TextView
            android:id="@+id/genderText"
            android:layout_width="0dp"
            android:layout_height="31dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@{viewmodel.gender}"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/nameLabel"
            app:layout_constraintTop_toBottomOf="@+id/usernameText" />

        <TextView
            android:id="@+id/usernameLabel"
            android:layout_width="0dp"
            android:layout_height="31dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/usernameLabel"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameLabel" />
        <TextView
            android:id="@+id/usernameText"
            android:layout_width="0dp"
            android:layout_height="31dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@{viewmodel.username}"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/nameLabel"
            app:layout_constraintTop_toBottomOf="@+id/nameText" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/home_screen"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="0dp"
            android:layout_height="31dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="28dp"
            android:text="@string/nameLabel"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleText" />
        <TextView
            android:id="@+id/nameText"
            android:layout_width="0dp"
            android:layout_height="31dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="32dp"
            android:text="@{viewmodel.name}"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nameLabel"
            app:layout_constraintTop_toBottomOf="@+id/titleText" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="205dp" />

        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="349dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:onClick="@{()->viewmodel.logoutBtnClicked()}"
            android:text="@string/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>